fix title center alignment

--- a/assets/stylesheets/widgets-global.scss
+++ b/assets/stylesheets/widgets-global.scss
@@ -4,5 +4,6 @@
   color: $title-color;
   position: absolute;
   top: $space;
+  left: 0;
   width: 100%;
 }
